force-app/main/default/objects/Account/fields/Contractor_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Conversion__c</fullName>
    <inlineHelpText>Confirm if the company&apos;s uses contractors and has potential for converting them to full-time employees.</inlineHelpText>
    <label>Contractor Conversion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>