force-app/main/default/objects/Account/fields/Contractor_Only_Active_NB__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Only_Active_NB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contractor-Only (Active NB)</label>
    <type>Checkbox</type>
</CustomField>