force-app/main/default/objects/Account/fields/Countries__c.field-meta.xml
<CustomField>
    <fullName>Countries__c</fullName>
    <description>Number of countries outside of official locations (indicates remote workforce) - goodfit</description>
    <inlineHelpText>Number of countries outside of official locations</inlineHelpText>
    <label>#Countries Live FTEs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>