force-app/main/default/objects/Account/fields/Country_HQ__c.field-meta.xml
<CustomField>
    <fullName>Country_HQ__c</fullName>
    <inlineHelpText>Enter the country where the company&apos;s headquarters are located.</inlineHelpText>
    <label>Country HQ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>