force-app/main/default/objects/Account/fields/Created_by_Goodfit__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Goodfit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enriched by Goodfit</label>
    <type>Checkbox</type>
</CustomField>