force-app/main/default/objects/Account/fields/Created_by_Iceberg_Import__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Iceberg_Import__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this was created by the April 2021 Import by Iceberg</description>
    <inlineHelpText>Checked if this was created by the April 2021 Import by Iceberg</inlineHelpText>
    <label>Created by Iceberg Import</label>
    <type>Checkbox</type>
</CustomField>