force-app/main/default/objects/Account/fields/Created_via_Lead_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Created_via_Lead_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created via Lead Conversion</label>
    <type>Checkbox</type>
</CustomField>