force-app/main/default/objects/Account/fields/Crunchbase_Industries__c.field-meta.xml
<CustomField>
    <fullName>Crunchbase_Industries__c</fullName>
    <label>Crunchbase Industries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Artificial Intellgence</fullName>
            </value>
            <value>
                <fullName>Big Data</fullName>
            </value>
            <value>
                <fullName>SaaS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>