force-app/main/default/objects/Account/fields/Crunchbase_Profile_URL__c.field-meta.xml
<CustomField>
    <fullName>Crunchbase_Profile_URL__c</fullName>
    <description>Crunchbase Profile URL</description>
    <inlineHelpText>Provide the URL to the company’s profile on Crunchbase.</inlineHelpText>
    <label>Crunchbase Profile URL</label>
    <type>Url</type>
</CustomField>