force-app/main/default/objects/Account/fields/Crunchbase_Top_5_Investors__c.field-meta.xml
<CustomField>
    <fullName>Crunchbase_Top_5_Investors__c</fullName>
    <label>Crunchbase Top 5 Investors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>