force-app/main/default/objects/Account/fields/CSM__c.field-meta.xml
<CustomField>
    <fullName>CSM__c</fullName>
    <label>zzzCSM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>