force-app/main/default/objects/Account/fields/CSM_Early_handover__c.field-meta.xml
<CustomField>
    <fullName>CSM_Early_handover__c</fullName>
    <description>this is used when a tier change request is approved</description>
    <label>CSM Early handover</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>