force-app/main/default/objects/Account/fields/CSM_New__c.field-meta.xml
<CustomField>
    <fullName>CSM_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the Customer Success Manager assigned to the account.</description>
    <inlineHelpText>Indicates the Customer Success Manager assigned to the account.</inlineHelpText>
    <label>CSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>