force-app/main/default/objects/Account/fields/CSM_Notes__c.field-meta.xml
<CustomField>
    <fullName>CSM_Notes__c</fullName>
    <inlineHelpText>Add notes related to Health, Level of Effort, general relationship with the customer</inlineHelpText>
    <label>CSM Notes</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>