force-app/main/default/objects/Account/fields/Current_Alternative_Providers__c.field-meta.xml
<CustomField>
    <fullName>Current_Alternative_Providers__c</fullName>
    <label>Current Alternative Providers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Atlas/Elements Global Services</fullName>
            </value>
            <value>
                <fullName>Boundless</fullName>
            </value>
            <value>
                <fullName>Deel</fullName>
            </value>
            <value>
                <fullName>Employment Hero</fullName>
            </value>
            <value>
                <fullName>Globalisation Partners</fullName>
            </value>
            <value>
                <fullName>Horizons</fullName>
            </value>
            <value>
                <fullName>Lano</fullName>
            </value>
            <value>
                <fullName>Legacy Provider</fullName>
            </value>
            <value>
                <fullName>Magnit</fullName>
            </value>
            <value>
                <fullName>Multiplier</fullName>
            </value>
            <value>
                <fullName>Not Disclosed</fullName>
            </value>
            <value>
                <fullName>Omnipresent</fullName>
            </value>
            <value>
                <fullName>Ontop</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Panther</fullName>
            </value>
            <value>
                <fullName>Papaya</fullName>
            </value>
            <value>
                <fullName>Pilot</fullName>
            </value>
            <value>
                <fullName>Remofirst</fullName>
            </value>
            <value>
                <fullName>Remote.com</fullName>
            </value>
            <value>
                <fullName>Remotepass</fullName>
            </value>
            <value>
                <fullName>Rippling</fullName>
            </value>
            <value>
                <fullName>Safeguard Global</fullName>
            </value>
            <value>
                <fullName>Skuad</fullName>
            </value>
            <value>
                <fullName>TWC</fullName>
            </value>
            <value>
                <fullName>Velocity Global</fullName>
            </value>
            <value>
                <fullName>Via</fullName>
            </value>
            <value>
                <fullName>Workmotion</fullName>
            </value>
            <value>
                <fullName>Toku</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>