force-app/main/default/objects/Account/fields/Current_Provider__c.field-meta.xml
<CustomField>
    <fullName>Current_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Enables Sales to track who is currently serving the account - to be used to run campaigns with accounts served by competitors</description>
    <inlineHelpText>Document the name of the account&apos;s current service or product provider.</inlineHelpText>
    <label>Current Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Current Provider)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>