force-app/main/default/objects/Account/fields/Customer_First_Assisted_Setup_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_First_Assisted_Setup_Date__c</fullName>
    <description>This is the FASD (Non Canceled) date from the Customer in the platform/Looker. Used to calculate whether an Opportunity is New or Existing.</description>
    <inlineHelpText>This is the FASD (Non Canceled) date from the Customer in the platform/Looker. Used to calculate whether an Opportunity is New or Existing.</inlineHelpText>
    <label>Customer First Assisted Setup Date</label>
    <type>Date</type>
</CustomField>