force-app/main/default/objects/Account/fields/Customer_relationship_score__c.field-meta.xml
<CustomField>
    <fullName>Customer_relationship_score__c</fullName>
    <description>Health score from CSMs</description>
    <inlineHelpText>Score the customer relationship only (without taking into account product gaps, METs, etc)</inlineHelpText>
    <label>Customer relationship score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>