force-app/main/default/objects/Account/fields/Date_of_future_submission__c.field-meta.xml
<CustomField>
    <fullName>Date_of_future_submission__c</fullName>
    <inlineHelpText>Provide the expected date for future TMs submission.</inlineHelpText>
    <label>Date of future submission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>