force-app/main/default/objects/Account/fields/Days_Since_Last_Owner_Change__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Owner_Change__c</fullName>
    <formula>TODAY() - (BLANKVALUE(Owner_Change_Date__c,TODAY()))</formula>
    <label>Days Since Last Owner Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>