force-app/main/default/objects/Account/fields/Days_Since_Last_Primary_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Primary_Campaign__c</fullName>
    <formula>TODAY() - Last_Primary_Campaign_Assignment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Primary Campaign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>