force-app/main/default/objects/Account/fields/Days_to_Latest_Future_Sales_Activity__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Latest_Future_Sales_Activity__c</fullName>
    <formula>Future_Sales_Activity__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Latest Future Sales Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>