force-app/main/default/objects/Account/fields/Deduplication_Helper__c.field-meta.xml
<CustomField>
    <fullName>Deduplication_Helper__c</fullName>
    <description>Technical field to pull records into deduplication. Please insert the ID of the master account. Managed manually in Insycle.</description>
    <label>Deduplication Helper</label>
    <length>200</length>
    <type>Text</type>
</CustomField>