force-app/main/default/objects/Account/fields/Deposit_Removal_Comment__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Removal_Comment__c</fullName>
    <description>To capture additional comments for FIN</description>
    <inlineHelpText>Provide any additional comments or reasons for the deposit removal.</inlineHelpText>
    <label>Deposit Removal Comment</label>
    <type>TextArea</type>
</CustomField>