force-app/main/default/objects/Account/fields/Deposit_Removal_duration__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Removal_duration__c</fullName>
    <description>To document how long the deposit is removed for</description>
    <inlineHelpText>Specify the duration for which the deposit is waived.</inlineHelpText>
    <label>Deposit Removal duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Undefined</fullName>
            </value>
            <value>
                <fullName>1 Month</fullName>
            </value>
            <value>
                <fullName>2 Months</fullName>
            </value>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>Other (specify in comment)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>