force-app/main/default/objects/Account/fields/Deposit_Removal_Request_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Removal_Request_Submitter__c</fullName>
    <description>Stores the submitter of each deposit removal request.  Used to notify the submitter when the request is approved or rejected.</description>
    <label>Deposit Removal Request Submitter</label>
    <type>Email</type>
</CustomField>