force-app/main/default/objects/Account/fields/Deposit_Requirement_Removed__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Requirement_Removed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this field if a deposit requirement for the account has been waived or removed.</inlineHelpText>
    <label>Deposit Removed</label>
    <type>Checkbox</type>
</CustomField>