force-app/main/default/objects/Account/fields/Dev_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Dev_Jobs__c</fullName>
    <description>Count of developer / software open roles - goodfit data</description>
    <inlineHelpText>Count of developer / software open roles</inlineHelpText>
    <label>Dev Open Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>