force-app/main/default/objects/Account/fields/Development_Matrix_Link__c.field-meta.xml
<CustomField>
    <fullName>Development_Matrix_Link__c</fullName>
    <description>Used to store the link of the Account Development Matrix, created in GSheet</description>
    <inlineHelpText>Add the link of the most recent Account Development Matrix.</inlineHelpText>
    <label>Development Plan Link</label>
    <type>Url</type>
</CustomField>