force-app/main/default/objects/Account/fields/Direct_Debit__c.field-meta.xml
<CustomField>
    <fullName>Direct_Debit__c</fullName>
    <inlineHelpText>Indicate if the customer has direct debit or not.</inlineHelpText>
    <label>Direct Debit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>