force-app/main/default/objects/Account/fields/Direct_Debit_Removal_Request_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Direct_Debit_Removal_Request_Submitter__c</fullName>
    <label>Direct Debit Removal Request Submitter</label>
    <type>Email</type>
</CustomField>