force-app/main/default/objects/Account/fields/Discount_to_Oyster__c.field-meta.xml
<CustomField>
    <fullName>Discount_to_Oyster__c</fullName>
    <label>Discount (to Oyster)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>