force-app/main/default/objects/Account/fields/Discount_to_Partner__c.field-meta.xml
<CustomField>
    <fullName>Discount_to_Partner__c</fullName>
    <label>Discount (to Partner)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Unique Terms</fullName>
            </value>
            <value>
                <fullName>20% Discount</fullName>
            </value>
            <value>
                <fullName>30% Discount</fullName>
            </value>
            <value>
                <fullName>1st Hire Free, 10% Remaining</fullName>
                <isActive>false</isActive>
                <label>1st Hire Free, 10% Remaining</label>
            </value>
            <value>
                <fullName>1st Hire Free, 30% Remaining</fullName>
                <isActive>false</isActive>
                <label>1st Hire Free, 30% Remaining</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>