force-app/main/default/objects/Account/fields/Discount_to_Partner_Unique_Terms__c.field-meta.xml
<CustomField>
    <fullName>Discount_to_Partner_Unique_Terms__c</fullName>
    <label>Discount (to Partner) Unique Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>