force-app/main/default/objects/Account/fields/Duplicate_Status_Identical_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Status_Identical_Account_Name__c</fullName>
    <inlineHelpText>SLD: Second-Level Domain</inlineHelpText>
    <label>Duplicate Status: Identical SLD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Different Company</fullName>
            </value>
            <value>
                <fullName>Same Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>