force-app/main/default/objects/Account/fields/Earliest_Event_Date_After_Acc_Activate__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Event_Date_After_Acc_Activate__c</fullName>
    <description>Used in Sales Effectiveness Reporting. Populated by DLRS</description>
    <label>Earliest Event Date After Acc Activate</label>
    <type>DateTime</type>
</CustomField>