force-app/main/default/objects/Account/fields/Early_Handover__c.field-meta.xml
<CustomField>
    <fullName>Early_Handover__c</fullName>
    <description>Used in Account Tier Update flow</description>
    <label>Early Handover</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSM Early Handover</fullName>
            </value>
            <value>
                <fullName>No Early Handover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>