force-app/main/default/objects/Account/fields/Embedded__c.field-meta.xml
<CustomField>
    <fullName>Embedded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Embedded</label>
    <type>Checkbox</type>
</CustomField>