force-app/main/default/objects/Account/fields/Engaged_date__c.field-meta.xml
<CustomField>
    <fullName>Engaged_date__c</fullName>
    <description>First TM (FTE or Contractor) engaged date</description>
    <label>Engaged date</label>
    <type>Date</type>
</CustomField>