force-app/main/default/objects/Account/fields/EOR_Transfer__c.field-meta.xml
<CustomField>
    <fullName>EOR_Transfer__c</fullName>
    <inlineHelpText>Indicate if the customer is looking to transfer EOR.</inlineHelpText>
    <label>EOR Transfer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>