force-app/main/default/objects/Account/fields/ERP_Payroll__c.field-meta.xml
<CustomField>
    <fullName>ERP_Payroll__c</fullName>
    <inlineHelpText>Note the ERP system or payroll service the customer has implemented.</inlineHelpText>
    <label>ERP/Payroll</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADP Workforce Now</fullName>
            </value>
            <value>
                <fullName>Ceridian Dayforce</fullName>
            </value>
            <value>
                <fullName>Don&apos;t know</fullName>
            </value>
            <value>
                <fullName>Gusto</fullName>
            </value>
            <value>
                <fullName>NetSuite</fullName>
            </value>
            <value>
                <fullName>Oracle HCM</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Paycom</fullName>
            </value>
            <value>
                <fullName>PayFit</fullName>
            </value>
            <value>
                <fullName>Paylocity</fullName>
            </value>
            <value>
                <fullName>Quickbooks</fullName>
            </value>
            <value>
                <fullName>Rippling</fullName>
            </value>
            <value>
                <fullName>SAP SuccessFactors</fullName>
            </value>
            <value>
                <fullName>UltiPro</fullName>
            </value>
            <value>
                <fullName>Workday</fullName>
            </value>
            <value>
                <fullName>Xero</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>