force-app/main/default/objects/Account/fields/Expense__c.field-meta.xml
<CustomField>
    <fullName>Expense__c</fullName>
    <inlineHelpText>Enter the expense reporting or management system employed by the customer.</inlineHelpText>
    <label>Expense</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Workday</fullName>
            </value>
            <value>
                <fullName>Concur</fullName>
            </value>
            <value>
                <fullName>Expensify</fullName>
            </value>
            <value>
                <fullName>ADP Workforce Now</fullName>
            </value>
            <value>
                <fullName>Paylocity</fullName>
            </value>
            <value>
                <fullName>Rippling</fullName>
            </value>
            <value>
                <fullName>Paycom</fullName>
            </value>
            <value>
                <fullName>SAP SuccessFactors</fullName>
            </value>
            <value>
                <fullName>Oracle HCM</fullName>
            </value>
            <value>
                <fullName>Pleo</fullName>
            </value>
            <value>
                <fullName>Rydoo</fullName>
            </value>
            <value>
                <fullName>Don&apos;t know</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>