force-app/main/default/objects/Account/fields/Extension_of_Payment_Terms_Details__c.field-meta.xml
<CustomField>
    <fullName>Extension_of_Payment_Terms_Details__c</fullName>
    <description>Used in Account Direct Debit Approval flow</description>
    <label>Extension of Payment Terms Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>