force-app/main/default/objects/Account/fields/Financial_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Financial_Indicator__c</fullName>
    <description>Used by &quot;Account Direct Debit Approval&quot; flow</description>
    <label>Financial Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>