force-app/main/default/objects/Account/fields/First_Closed_Won_Opp_Creator__c.field-meta.xml
<CustomField>
    <fullName>First_Closed_Won_Opp_Creator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated automatically when an opp is closed won.  The user that created the first closed won opp for the account.</description>
    <label>First Closed Won Opp Creator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts_First_CW_Opp</relationshipName>
    <type>Lookup</type>
</CustomField>