force-app/main/default/objects/Account/fields/First_Form_Submitted__c.field-meta.xml
<CustomField>
    <fullName>First_Form_Submitted__c</fullName>
    <description>First HubSpot form submitted by any of the associated leads/contacts. Reliable for accounts created after September 1, 2023</description>
    <inlineHelpText>First HubSpot form submitted by any of the associated leads/contacts.</inlineHelpText>
    <label>First HS Form Submitted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>