force-app/main/default/objects/Account/fields/First_HS_Form_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>First_HS_Form_Submitted_Date__c</fullName>
    <description>Date of the first HubSpot form submitted by any of the associated leads/contacts. Reliable for accounts created after September 1, 2023</description>
    <label>First HS Form Submitted Date</label>
    <type>DateTime</type>
</CustomField>