force-app/main/default/objects/Account/fields/Forecast__c.field-meta.xml
<CustomField>
    <fullName>Forecast__c</fullName>
    <inlineHelpText># of Team Members (TM)</inlineHelpText>
    <label>Forecast Hires Current Q</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>