force-app/main/default/objects/Account/fields/Forecast_Hires_Next_Q__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Hires_Next_Q__c</fullName>
    <inlineHelpText># of Team Members (TM)</inlineHelpText>
    <label>Forecast Hires Next Q</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>