force-app/main/default/objects/Account/fields/Forecast_Notes__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Notes__c</fullName>
    <description>To capture any key information regarding the forecast</description>
    <label>Forecast Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>