force-app/main/default/objects/Account/fields/Founders_HQ__c.field-meta.xml
<CustomField>
    <fullName>Founders_HQ__c</fullName>
    <inlineHelpText>Use for Accounts that are identified as domiciled/registered in one country but the Founders (and often cases the majority of the team) are all based/from another country.</inlineHelpText>
    <label>Founders HQ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>