force-app/main/default/objects/Account/fields/Funding_Date__c.field-meta.xml
<CustomField>
    <fullName>Funding_Date__c</fullName>
    <label>Funding Date</label>
    <type>Date</type>
</CustomField>