force-app/main/default/objects/Account/fields/Funding_Rounds__c.field-meta.xml
<CustomField>
    <fullName>Funding_Rounds__c</fullName>
    <description>Provides information about company&apos;s funding rounds. Possible enrichment sources:
        Zoominfo, Clearbit, Cognism, Clay, Crunchbase, G2, Madkudu.</description>
    <label>Funding Rounds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>