force-app/main/default/objects/Account/fields/Funding_Type__c.field-meta.xml
<CustomField>
    <fullName>Funding_Type__c</fullName>
    <inlineHelpText>Describe the type of funding the company has received (e.g., angel, Series A, venture capital).</inlineHelpText>
    <label>Funding Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seed</fullName>
            </value>
            <value>
                <fullName>Series A</fullName>
            </value>
            <value>
                <fullName>Series B</fullName>
            </value>
            <value>
                <fullName>Series C</fullName>
            </value>
            <value>
                <fullName>Series D</fullName>
            </value>
            <value>
                <fullName>Series E</fullName>
            </value>
            <value>
                <fullName>Undisclosed Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>