force-app/main/default/objects/Account/fields/Future_Activity_Lock__c.field-meta.xml
<CustomField>
    <fullName>Future_Activity_Lock__c</fullName>
    <description>Check if any future Activity is set for Lead or Contact matched to this Account.</description>
    <formula>Days_to_Latest_Future_Sales_Activity__c &gt; 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Future Activity Lock</label>
    <type>Checkbox</type>
</CustomField>