force-app/main/default/objects/Account/fields/Future_Sales_Activity__c.field-meta.xml
<CustomField>
    <fullName>Future_Sales_Activity__c</fullName>
    <description>Closest Future Sales Activity, determined across leads and contacts matched to the account, based on roll-ups from DLRS.</description>
    <formula>IF(
    AND(NOT(ISBLANK(Closest_Future_Event_Account__c)), NOT(ISBLANK(Closest_Future_Task_Account__c))),
    IF(
        Closest_Future_Event_Account__c &gt; Closest_Future_Task_Account__c,
        Closest_Future_Event_Account__c,
        Closest_Future_Task_Account__c
    ),
    IF(
        NOT(ISBLANK(Closest_Future_Event_Account__c)),
        Closest_Future_Event_Account__c,
        IF(
            NOT(ISBLANK(Closest_Future_Task_Account__c)),
            Closest_Future_Task_Account__c,
            NULL
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Future Sales Activity</label>
    <type>Date</type>
</CustomField>