force-app/main/default/objects/Account/fields/Future_Sales_Event__c.field-meta.xml
<CustomField>
    <fullName>Future_Sales_Event__c</fullName>
    <description>Populated by DLRS.  Date/time of the latest future event.</description>
    <label>Future Sales Event</label>
    <type>DateTime</type>
</CustomField>